delete and add  were created

--- a/html/edit.html
+++ b/html/edit.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -21,7 +21,7 @@
                         <a href="./index.html" class="btn btn-secondary ">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./add.html" class="btn btn-primary  ms-5">Add Product</a>
+                        <a href="./edit.html" class="btn btn-primary  ms-5">Edit</a>
                     </li>
                 </ul>
 
@@ -33,20 +33,20 @@
 
 
         <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Write new Name</label>
-            <input type="text" class="form-control" id="exampleFormControlInput2" placeholder="name">
+            <label for="exampleFormControlInput1" class="form-label">Change Name</label>
+            <input type="text" class="form-control" id="ChangeNameInput" placeholder="name">
 
         </div>
         <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">write new description</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="description">
+            <label for="exampleFormControlInput1" class="form-label">Change description</label>
+            <input type="text" class="form-control" id="ChangeDescInput" placeholder="description">
 
         </div>
 
-        <button class="btn btn-primary" id="addBtn">Add Product</button>
+        <button class="btn btn-primary" id="editBtn">Edit Product</button>
     </div>
 
-    <script type="module" src="./assets/add.js"></script>
+    <script type="module" src="./assets/edit.js"></script>
 
 </body>
 
