--- a/html/edit.html
+++ b/html/edit.html
@@ -29,6 +29,7 @@
         </div>
     </nav>
     <div class="loader"></div>
+    <div class="row" style="display: none;"></div>
     <div class="container mt-5">
 
 
