--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,7 @@
     <title>Document</title>
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg bg-body-tertiary mt-3">
         <div class="container">
           
@@ -27,8 +28,8 @@
               </li>
             </ul>
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <input class="form-control me-2" type="search" placeholder="Search" id="search" aria-label="Search">
+              <button class="btn btn-outline-success">Search</button>
             </form>
           </div>
         </div>
